src/app/pages/confirmation/confirmation.scss
@import 'variables';
@import 'mixins';

$confirmation-green: #0c9372;
$page-background: #fbfbfb;

.confirmation-page {
    background-color: darken(color(neutral-lightest), 5%);

    .page-intro {
        background-color: $confirmation-green;
        display: flex;
        justify-content: center;

        .subhead,
        .subhead h1 {
            align-items: center;
            color: color(neutral-lightest);
            display: flex;
            flex-direction: row;
            justify-content: center;
            padding-bottom: 0;
        }

        .subhead {
            padding-top: 4rem;

            h1 {
                max-width: 100%;
            }
        }

        .header-link {
            color: color(blue);
            line-height: 2;

            &:hover {
                text-decoration: underline;
            }
        }

        .text-content {
            align-items: flex-start;
            display: flex;
            flex: 1 1 50%;
            flex-direction: column;
            font-size: 1.8rem;
            margin-left: 14rem;
            padding-bottom: 4rem;

            @media (max-width: 1024px) {
                margin-left: calc(54vw - 41.4rem);
            }

            @include tablet {
                margin-left: 0;
            }

            @include phone {
                margin-left: 0;
            }

            &.centered {
                align-items: center;
                margin-left: auto;
                text-align: center;
            }

            &.left-aligned {
                text-align: left;
            }
        }

        img {
            display: inline-block;
            flex: 1 0 20rem;
            height: calc(35rem - 2vw);
            left: -14rem;
            position: relative;

            @media (max-width: 1024px) {
                left: calc(41.4rem - 54vw);
            }

            @include phone {
                display: none;
            }

            @include tablet {
                display: none;
            }
        }
    }

    .btn.cta {
        background-color: color(orange);
        color: color(neutral-lightest);
        display: inline-block;
        font-size: 1.6rem;
        margin: 1rem 0;
        padding: 1em 2em;
    }

    .go-back {
        color: color(neutral-lightest);
        font-size: 1.4rem;

        &::before {
            content: '▸';
            display: inline-block;
            font-size: 100%;
            padding-left: 0.3em;
            transform: rotate(180deg);
            vertical-align: middle;
        }
    }

    .wrapper {
        background-color: $page-background;
        min-height: 13rem;
        padding-top: 2rem;
    }

    .below-header-text {
        display: flex;
        justify-content: center;
        margin: 3rem auto;

        @include phone {
            text-align: left;
        }
    }

    .buttons {
        display: flex;
        justify-content: center;

        .btn {
            font-size: 1.4rem;
            margin: 0 1rem;
        }
    }

    .white-on-blue,
    .white-on-gold {
        color: color(neutral-lightest);
    }

    .white-on-blue {
        background-color: color(blue);
    }

    .white-on-gold {
        background-color: color(gold);
    }
}

